--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="d:\Captures\foto diri\gambar_2023-01-11_224042338-removebg-preview.png" alt="Foto profil">
         <div class="profile-info">
             <h2>Muhammad Ibra NajwanHawali</h2>
-            <p>saya suka bermain game, dan suka makan</p>
+            <p>saya suka bermain game fps, dan suka makan</p>
         </div>
     </section>
 <!--Section Sosial Media-->
