--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <!--Section Profile-->
     <section class="profile">
-        <img src="d:\Captures\foto diri\gambar_2023-01-11_224042338-removebg-preview.png" alt="Foto profil">
+        <img src="./assets/images/gambar_2023-01-11_224042338-removebg-preview.png" alt="Foto profil">
         <div class="profile-info">
             <h2>Muhammad Ibra NajwanHawali</h2>
             <p>saya suka bermain game fps, dan suka makan</p>
