--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="https://instagram.com/ibra_project1?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D">instagram</a>
 </section>
    <!-- Section portofolio -->
-   <section class="search-form background" style="background-color: #767765 !important;">
+   <section class="search-form background" style="background-color: #abac97 !important;">
     <h2>Cari Proyek</h2>
     <input id="search" type="text" name="search" onkeyup="search()" placeholder="Masukkan kata kunci">
 </section>
