--- a/pokemon.html
+++ b/pokemon.html
@@ -25,22 +25,22 @@
                      aria-label="Basic radio toggle button group">
                      <input type="radio" class="btn-chek" name="btnradio" name="input-pokemon-1" value="pokemon-air" id="pokemon1" autocomplete="off">
                      <label class="btn btn-outline-primary" for="pokemon1">
-                        <img src="/DOM/pokemon_air.webp" width="100px" alt="">
+                        <img src="./assets/images/pokemon_air.webp" width="100px" alt="">
                      </label>
 
                      <input type="radio" class="btn-chek" name="btnradio" id="pokemon2" autocomplete="off">
                      <label class="btn btn-outline-primary" for="pokemon2">
-                        <img src="/DOM/pokemon_api.webp" width="100px" alt="">
+                        <img src="./assets/images/pokemon_angin.webp" width="100px" alt="">
                      </label>
 
                      <input type="radio" class="btn-chek" name="btnradio" id="pokemon3" autocomplete="off">
                      <label class="btn btn-outline-primary" for="pokemon3">
-                        <img src="/DOM/pokemon_angin.webp" width="100px" alt="">
+                        <img src="./assets/images/pokemon_api.webp" width="100px" alt="">
                      </label>
 
                      <input type="radio" class="btn-chek" name="btnradio" id="pokemon4" autocomplete="off">
                      <label class="btn btn-outline-primary" for="pokemon4">
-                        <img src="/DOM/pokemon_jahat.webp" width="100px" alt="">
+                        <img src="./assets/images/pokemon_jahat.webp" width="100px" alt="">
                      </label>
                 </div>
                 <hr>
