--- a/pokemon.html
+++ b/pokemon.html
@@ -3,14 +3,15 @@
 
 <head>
     <!-- Required meta tags -->
-    <meta charser="utf-8">
-    <meta name="viewport" content="width=device-width, initian-scale">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.">
 
-    <!-- Bootstrap CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/Bootstrap@5.0.2/dist/CSS/Bootstrap.main.CSS" rel="stylesheet"
-          integrity="sha384-EVATQN3/azprG1Anm3QDgoJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-          <title>World of Pokemon</title>
+
+    <title>World of Pokemon</title>
 </head>
 
 <body>
@@ -19,37 +20,38 @@
         <div class="row mb-1 mt-1">
             <div class="col-md-3"></div>
             <div class="col-md-6">
-                <button class="btn btn-info btn-sm mb-2" id="btn-reset" type="reset">reset</button>
+                <button class="btn btn-info btn-sm mb-2" id="btn-reset" type="button">reset</button>
                 <h3 class="fw-light">list pokemon</h3>
                 <div class="btn-group shadow-lg p-3 bg-body rounded" role="group"
                      aria-label="Basic radio toggle button group">
-                     <input type="radio" class="btn-chek" name="btnradio" name="input-pokemon-1" value="pokemon-air" id="pokemon1" autocomplete="off">
+                     <input type="radio" class="btn-check" name="btnradio" id="pokemon1" autocomplete="off">
                      <label class="btn btn-outline-primary" for="pokemon1">
-                        <img src="./assets/images/pokemon_air.webp" width="100px" alt="">
+                        <img src="pokemon_air.webp" width="100px" alt="">
                      </label>
 
-                     <input type="radio" class="btn-chek" name="btnradio" id="pokemon2" autocomplete="off">
+                     <input type="radio" class="btn-check" name="btnradio" id="pokemon2" autocomplete="off">
                      <label class="btn btn-outline-primary" for="pokemon2">
-                        <img src="./assets/images/pokemon_angin.webp" width="100px" alt="">
+                        <img src="pokemon_angin.webp" width="100px" alt="">
                      </label>
 
-                     <input type="radio" class="btn-chek" name="btnradio" id="pokemon3" autocomplete="off">
+                     <input type="radio" class="btn-check" name="btnradio" id="pokemon3" autocomplete="off">
                      <label class="btn btn-outline-primary" for="pokemon3">
-                        <img src="./assets/images/pokemon_api.webp" width="100px" alt="">
+                        <img src="pokemon_api.webp" width="100px" alt="">
                      </label>
 
-                     <input type="radio" class="btn-chek" name="btnradio" id="pokemon4" autocomplete="off">
+                     <input type="radio" class="btn-check" name="btnradio" id="pokemon4" autocomplete="off">
                      <label class="btn btn-outline-primary" for="pokemon4">
-                        <img src="./assets/images/pokemon_jahat.webp" width="100px" alt="">
+                        <img src="pokemon_jahat.webp" width="100px" alt="">
                      </label>
                 </div>
                 <hr>
-                <h1 class="fw=light" id="pokemon-result"></h1>
+                <h1 class="fw-light" id="pokemon-result"></h1>
                 <hr>
             </div>
             <div class="col-md-3"></div>
          </div>
-    </div>   
+    </div>
+    <script src="./assets/javascript/pokemon.js"></script>
 </body>
-<script src="./assets/javascrip/pokemon.js"></script>
+
 </html>
