--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initian-scale=1.0">
-<title>portofolio ibra</title>
-<link href="./assets/css/style.css" rel="stylesheet" type="text/css">
-<style>
-    .serch-form { 
-        background-color: #d6d6d6;
-    }
-</style>
-</head> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portofolio Saya</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <style>
+        .search-form {
+            background-color: #d60808;
+        }
+    </style>
+</head>
 <body>
     <header>
-        <h1>portofolio ibra</h1>
+        <h1>Portofolio Saya</h1>
     </header>
-    <!--Section Profile-->
     <section class="profile">
-        <img src="./assets/images/gambar_2023-01-11_224042338-removebg-preview.png" alt="Foto profil">
+        <img src="./assets/images/gambar_2023-01-11_224042338-removebg-preview.png" alt="Foto Profil">
         <div class="profile-info">
-            <h2>Muhammad Ibra NajwanHawali</h2>
-            <p>saya suka bermain game fps, dan suka makan</p>
+            <h2>Ibra Najwan</h2>
+            <p>saya suka bermain game dan makan.</p>
         </div>
     </section>
-<!--Section Sosial Media-->
-<section class="Sosial Media">
-    <h2>Media Sosial</h2>
-    <a href="https://www.facebook.com/profile.php?id=61550475924182&mibextid=ZbWKwL/">facebook</a>
-    <a href="https://twitter.com/Ibraproject01?t=yrTfOg74l_5SHelA-PZAEg&s=09 ?">twitter</a>
-    <a href="https://instagram.com/ibra_project1?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D">instagram</a>
-</section>
-   <!-- Section portofolio -->
-   <section class="search-form background" style="background-color: #abac97 !important;">
-    <h2>Cari Proyek</h2>
-    <input id="search" type="text" name="search" onkeyup="search()" placeholder="Masukkan kata kunci">
-</section>
-<div class="container" id="portfolioContainer">
-</div>
-<!-- End Section portofolio -->
+    <!-- Section Social Media -->
+    <section class="social-media background" >
+        <h2>Media Sosial</h2>
+        <a href="https://www.facebook.com/profile.php?id=61550475924182&mibextid=ZbWKwL/">Facebook</a>
+        <a href="https://twitter.com/Ibraproject01?t=yrTfOg74l_5SHelA-PZAEg&s=09">Twitter</a>
+        <a href="https://instagram.com/ibra_project1?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D">Instagram</a>
+    </section>
 
-<div id="chat-container">
-    <div id="chat-log"></div>
-    <div id="floating-chat">
-        <button id="btn-chat">Chat</button>
+    <!-- Section portofolio -->
+    <section class="search-form background" style="background-color: #b5b6ae !important;">
+        <h2>Cari Proyek</h2>
+        <input id="search" type="text" name="search" onkeyup="search()" placeholder="Masukkan kata kunci">
+    </section>
+    <div class="container" id="portfolioContainer">
     </div>
-</div>
+    <!-- End Section portofolio -->
+
+    <div id="chat-container">
+        <div id="chat-log"></div>
+        <div id="floating-chat">
+            <button id="btn-chat">Chat</button>
+        </div>
+    </div>
 </body>
 <script src="./assets/js/index.js"></script>
+<script>
+    console.log("hello world!");
+</script>
 </html>
