--- a/pokemon.html
+++ b/pokemon.html
@@ -26,22 +26,22 @@
                      aria-label="Basic radio toggle button group">
                      <input type="radio" class="btn-check" name="btnradio" id="pokemon1" autocomplete="off">
                      <label class="btn btn-outline-primary" for="pokemon1">
-                        <img src="pokemon_air.webp" width="100px" alt="">
+                        <img src="./assets/images/pokemon_air.webp" width="100px" alt="">
                      </label>
 
                      <input type="radio" class="btn-check" name="btnradio" id="pokemon2" autocomplete="off">
                      <label class="btn btn-outline-primary" for="pokemon2">
-                        <img src="pokemon_angin.webp" width="100px" alt="">
+                        <img src="./assets/images/pokemon_angin.webp" width="100px" alt="">
                      </label>
 
                      <input type="radio" class="btn-check" name="btnradio" id="pokemon3" autocomplete="off">
                      <label class="btn btn-outline-primary" for="pokemon3">
-                        <img src="pokemon_api.webp" width="100px" alt="">
+                        <img src="./assets/images/pokemon_api.webp" width="100px" alt="">
                      </label>
 
                      <input type="radio" class="btn-check" name="btnradio" id="pokemon4" autocomplete="off">
                      <label class="btn btn-outline-primary" for="pokemon4">
-                        <img src="pokemon_jahat.webp" width="100px" alt="">
+                        <img src="./assets/images/pokemon_jahat.webp" width="100px" alt="">
                      </label>
                 </div>
                 <hr>
